win car game added

--- a/index.css
+++ b/index.css
@@ -49,6 +49,12 @@ body {
   color: rgb(165, 42, 42);
 }
 
+#wincar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 #tictactoe {
   display: flex;
   flex-wrap: wrap;
