--- a/index.css
+++ b/index.css
@@ -49,31 +49,12 @@ body {
   color: rgb(165, 42, 42);
 }
 
-#wincar {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-#tictactoe {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-#contacts {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-#todo {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-#checkers {
+#wincar,
+#tictactoe,
+#contacts,
+#todo,
+#checkers,
+#apod {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
